add fixes for contact sharing